--- a/src/libraries/icubmod/embObjSkin/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjSkin/CMakeLists.txt
@@ -17,5 +17,11 @@ if (NOT SKIP_embObjSkin)
     yarp_add_plugin(embObjSkin embObjSkin.h embObjSkin.cpp ../skinLib/SkinConfigReader.cpp ../skinLib/SkinDiagnostics.h)
     target_link_libraries(embObjSkin ethResources ${YARP_LIBRARIES})
     icub_export_plugin(embObjSkin)
-    yarp_install(FILES embObjSkin.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+ 
+  yarp_install(TARGETS embObjSkin
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 endif (NOT SKIP_embObjSkin)
