--- a/src/libraries/icubmod/esdSniffer/CMakeLists.txt
+++ b/src/libraries/icubmod/esdSniffer/CMakeLists.txt
@@ -20,7 +20,13 @@ IF(NOT SKIP_esdsniffer)
     yarp_add_plugin(esdsniffer EsdMessageSniffer.cpp EsdMessageSniffer.h)
     TARGET_LINK_LIBRARIES(esdsniffer  ${ESDCANAPI_LIB} ${YARP_LIBRARIES})
     icub_export_plugin(esdsniffer)
-    yarp_install(FILES esdsniffer.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
+  yarp_install(TARGETS esdsniffer
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
   ENDIF(NOT ESDCANAPI_FOUND)
 
 ENDIF(NOT SKIP_esdsniffer)
