--- a/src/libraries/icubmod/imuST_M1/CMakeLists.txt
+++ b/src/libraries/icubmod/imuST_M1/CMakeLists.txt
@@ -23,5 +23,11 @@ if (ENABLE_${PROJECTNAME})
     yarp_add_plugin(${PROJECTNAME} ST_M1.cpp ST_M1.h ST_M1_dataType.h)
     target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES})
     icub_export_plugin(${PROJECTNAME})
-    yarp_install(FILES imuST_M1.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+ 
+  yarp_install(TARGETS ${PROJECTNAME}
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 endif (ENABLE_${PROJECTNAME})
