--- a/src/libraries/icubmod/staticgrabber/CMakeLists.txt
+++ b/src/libraries/icubmod/staticgrabber/CMakeLists.txt
@@ -14,7 +14,13 @@ if (NOT SKIP_static_grabber)
   target_link_libraries(static_grabber ${YARP_LIBRARIES})
   
   icub_export_plugin(static_grabber)
-  yarp_install(FILES static_grabber.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+ 
+  yarp_install(TARGETS static_grabber
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 endif (NOT SKIP_static_grabber)
 
 
