--- a/src/libraries/icubmod/bcbBattery/CMakeLists.txt
+++ b/src/libraries/icubmod/bcbBattery/CMakeLists.txt
@@ -13,6 +13,10 @@ target_link_libraries(bcbBattery ${YARP_LIBRARIES})
 
 icub_export_plugin(bcbBattery)
 
-yarp_install(FILES bcbBattery.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+  yarp_install(TARGETS bcbBattery
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
 endif (NOT SKIP_bcbBattery)
