--- a/src/libraries/icubmod/canBusInertialMTB/CMakeLists.txt
+++ b/src/libraries/icubmod/canBusInertialMTB/CMakeLists.txt
@@ -16,7 +16,11 @@ target_link_libraries(canBusInertialMTB ${YARP_LIBRARIES})
 
 icub_export_plugin(canBusInertialMTB)
 
-yarp_install(FILES canBusInertialMTB.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+  yarp_install(TARGETS canBusInertialMTB
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
 else(ICUB_HAS_icub_firmware_shared)
   message(ERROR " canBusInertialMTB: cannot find icub_firmware_shared library, turn off device
