--- a/src/libraries/icubmod/embObjFTsensor/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjFTsensor/CMakeLists.txt
@@ -20,7 +20,11 @@ IF (NOT SKIP_embObjFTsensor)
   TARGET_LINK_LIBRARIES(embObjFTsensor ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(embObjFTsensor)
 
-  yarp_install(FILES embObjFTsensor.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+          yarp_install(TARGETS embObjFTsensor
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
 ENDIF (NOT SKIP_embObjFTsensor)
 
