--- a/src/libraries/icubmod/embObjIMU/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjIMU/CMakeLists.txt
@@ -20,7 +20,11 @@ IF (NOT SKIP_embObjIMU)
   TARGET_LINK_LIBRARIES(embObjIMU ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(embObjIMU)
 
-  yarp_install(FILES embObjIMU.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+        yarp_install(TARGETS embObjIMU
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
 ENDIF (NOT SKIP_embObjIMU)
 
