--- a/src/libraries/icubmod/embObjMultiEnc/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjMultiEnc/CMakeLists.txt
@@ -20,7 +20,12 @@ IF (NOT SKIP_embObjMultiEnc)
   TARGET_LINK_LIBRARIES(embObjMultiEnc ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(embObjMultiEnc)
 
-  yarp_install(FILES embObjMultiEnc.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+   yarp_install(TARGETS embObjMultiEnc
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 
 ENDIF (NOT SKIP_embObjMultiEnc)
 
