--- a/src/libraries/icubmod/embObjPSC/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjPSC/CMakeLists.txt
@@ -19,7 +19,11 @@ IF (NOT SKIP_embObjPSC)
   TARGET_LINK_LIBRARIES(embObjPSC ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(embObjPSC)
 
-  yarp_install(FILES embObjPSC.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+ yarp_install(TARGETS embObjPSC
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
 ENDIF (NOT SKIP_embObjPSC)
 
