--- a/src/libraries/icubmod/embObjVirtualAnalogSensor/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjVirtualAnalogSensor/CMakeLists.txt
@@ -14,6 +14,12 @@ IF (NOT SKIP_embObjVirtualAnalogSensor)
 
     TARGET_LINK_LIBRARIES(embObjVirtualAnalogSensor ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
     icub_export_plugin(embObjVirtualAnalogSensor)
-    yarp_install(FILES embObjVirtualAnalogSensor.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
+  yarp_install(TARGETS embObjVirtualAnalogSensor
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 ENDIF (NOT SKIP_embObjVirtualAnalogSensor)
 
