--- a/src/libraries/icubmod/gazeController/CMakeLists.txt
+++ b/src/libraries/icubmod/gazeController/CMakeLists.txt
@@ -18,6 +18,12 @@ if(NOT SKIP_gazecontrollerclient)
    target_link_libraries(gazecontrollerclient ${YARP_LIBRARIES})
 
    icub_export_plugin(gazecontrollerclient)
-   yarp_install(FILES gazecontrollerclient.ini DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
+  yarp_install(TARGETS gazecontrollerclient
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 endif()
 
