--- a/src/libraries/icubmod/imu3DM_GX3/CMakeLists.txt
+++ b/src/libraries/icubmod/imu3DM_GX3/CMakeLists.txt
@@ -14,4 +14,11 @@ if (ENABLE_${PROJECTNAME})
     yarp_add_plugin(${PROJECTNAME} 3dm_gx3.cpp 3dm_gx3.h )
     target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES})
     icub_export_plugin(${PROJECTNAME})
+
+  yarp_install(TARGETS ${PROJECTNAME}
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 endif (ENABLE_${PROJECTNAME})
