--- a/src/libraries/icubmod/skinWrapper/CMakeLists.txt
+++ b/src/libraries/icubmod/skinWrapper/CMakeLists.txt
@@ -14,5 +14,11 @@ IF (NOT SKIP_${PROJECTNAME})
   yarp_add_plugin(${PROJECTNAME} ${PROJECTNAME}.cpp ${PROJECTNAME}.h)
   TARGET_LINK_LIBRARIES(${PROJECTNAME} ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(${PROJECTNAME})
-  yarp_install(FILES skinWrapper.ini  DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
+  yarp_install(TARGETS skinWrapper
+               COMPONENT Runtime
+               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
+
 ENDIF (NOT SKIP_${PROJECTNAME})
