fixed EXTRA_CONFIG WRAPPER option in several files

--- a/src/libraries/icubmod/canBusVirtualAnalogSensor/CMakeLists.txt
+++ b/src/libraries/icubmod/canBusVirtualAnalogSensor/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Authors: Marco Randazzo <marco.randazzo@iit.it>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-yarp_prepare_plugin(canBusVirtualAnalogSensor CATEGORY device TYPE CanBusVirtualAnalogSensor INCLUDE CanBusVirtualAnalogSensor.h EXTRA_CONFIG WRAPPER=grabber)
+yarp_prepare_plugin(canBusVirtualAnalogSensor CATEGORY device TYPE CanBusVirtualAnalogSensor INCLUDE CanBusVirtualAnalogSensor.h EXTRA_CONFIG WRAPPER=virtualAnalogServer)
 
 if (NOT SKIP_canBusVirtualAnalogSensor)
 
