--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,14 @@ before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew upgrade python; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew tap robotology/cask; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install --only-dependencies yarp; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install gsl goocanvas sdl sdl_gfx sdl_image; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install gsl goocanvas sdl sdl_gfx sdl_image ccache; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install opencv@3; fi
   # Install opencv@3 (keg-only)
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew link --force opencv@3; fi
   # add QT5 to path so that it can be found by CMake
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH="$PATH:/usr/local/opt/qt/bin"; fi
+    # Enable ccache on osx
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
   #use the same set of cmake options used in the dashboard build
   - source ./admin/scripts/generate-cmake-options.sh
   # Setup the YARP branch
