xsens: cmake refactor with the automatic ini generation(since https://github.com/robotology/yarp/pull/1964)

--- a/src/libraries/icubmod/xsensmtx/CMakeLists.txt
+++ b/src/libraries/icubmod/xsensmtx/CMakeLists.txt
@@ -4,18 +4,25 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 #
 
-yarp_prepare_plugin(xsensmtx CATEGORY device TYPE yarp::dev::XSensMTx INCLUDE XSensMTx.h EXTRA_CONFIG WRAPPER=inertial)
+yarp_prepare_plugin(xsensmtx
+                    CATEGORY device
+                    TYPE yarp::dev::XSensMTx
+                    INCLUDE XSensMTx.h
+                    EXTRA_CONFIG WRAPPER=inertial)
 
 if (NOT SKIP_xsensmtx)
     include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-    yarp_add_plugin(xsensmtx MTComm.cpp  MTComm.h  XSensMTx.cpp  XSensMTx.h)
-    target_link_libraries(xsensmtx ${YARP_LIBRARIES})
-    icub_export_plugin(xsensmtx)
-
-  yarp_install(TARGETS xsensmtx
-               COMPONENT Runtime
-               LIBRARY DESTINATION ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
-               ARCHIVE DESTINATION ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
-               YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
-
+    yarp_add_plugin(xsensmtx MTComm.cpp
+                             MTComm.h
+                             XSensMTx.cpp
+                             XSensMTx.h)
+    target_link_libraries(xsensmtx PRIVATE YARP::YARP_OS
+                                           YARP::YARP_sig
+                                           YARP::YARP_dev)
+    yarp_install(TARGETS xsensmtx
+                 EXPORT icub-targets
+                 COMPONENT Runtime
+                 LIBRARY DESTINATION  ${ICUB_DYNAMIC_PLUGINS_INSTALL_DIR}
+                 ARCHIVE DESTINATION  ${ICUB_STATIC_PLUGINS_INSTALL_DIR}
+                 YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 endif (NOT SKIP_xsensmtx)
