imuFilter: move in icubmod folder

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -55,6 +55,7 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(embObjIMU)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(imuST_M1)
+  add_subdirectory(imuFilter)
   add_subdirectory(embObjPSC)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(imu3DM_GX3)
