--- a/src/libraries/icubmod/bmsBattery/CMakeLists.txt
+++ b/src/libraries/icubmod/bmsBattery/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Authors: Marco Randazzo <marco.randazzo@iit.it>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-yarp_prepare_plugin(bmsBattery CATEGORY device TYPE BmsBattery INCLUDE bmsBattery.h EXTRA_CONFIG WRAPPER=BatteryWrapper)
+yarp_prepare_plugin(bmsBattery CATEGORY device TYPE BmsBattery INCLUDE bmsBattery.h EXTRA_CONFIG WRAPPER=batteryWrapper)
 
 if(NOT SKIP_bmsBattery)
 
