emotioninterface: use constexpr instead of defines(Vocabs)

--- a/app/faceExpressions/conf/emotions_rfe.ini
+++ b/app/faceExpressions/conf/emotions_rfe.ini
@@ -16,3 +16,22 @@ E8   evi 05h 05h 05h 70h
 E9   shy 06h 06h 06h 70h
 E10  cun 07h 07h 07h 38h
 
+//number of colors
+colors 16
+
+C0   black   00h
+C1   white   01h
+C2   red     02h
+C3   lime    03h
+C4   blue    04h
+C5   yellow  05h
+C6   cyan    06h
+C7   magenta 07h
+C8   silver  08h
+C9   gray    09h
+C10  maroon  0Ah
+C11  olive   0Bh
+C12  green   0Ch
+C13  purple  0Dh
+C14  teal    0Eh
+C15  navy    0Fh
