emotionInterface: fix comments in the ini file

--- a/app/faceExpressions/conf/emotions_rfe.ini
+++ b/app/faceExpressions/conf/emotions_rfe.ini
@@ -38,14 +38,14 @@ C15  navy    0Fh
 
 // number of bitmask expressions
 bitmask_eyebrow_emotions 4
-BM_EB0 (0 4 8 12 16)  //00011111h // neutral, happy
-BM_EB1 (1 5 9 13 17)  //00022222h // surprised
+BM_EB0 (0 4 8 12 16)  //00011111h // surprised
+BM_EB1 (1 5 9 13 17)  //00022222h // neutral, happy, shy
 BM_EB2 (2 6 10 14 18) //00044444h // sad
-BM_EB3 (3 7 11 15 19) //00044444h //
+BM_EB3 (3 7 11 15 19) //00044444h // angry
 
 bitmask_mouth_emotions 5
 BM_M0  (6 9 10 18)                     //00020300h // neutral
-BM_M1  (0 2 6 9 10 12 14 18)           //00045645h // happy
+BM_M1  (0 2 6 9 10 12 14 18)           //00045645h // happy, evil
 BM_M2  (4 5 6 9 10 16 17 18)           //00070670h // sad
 BM_M3  (1 2 3 5 7 8 11 13 14 15 17 19) //000AE9AEh // surprised
 BM_M4  (4 5 6 9 10 16 17 18)           //00070670h // angry
