[ARE] added possibility to instantiate ActionPrimitivesLayer1
cc @xenvre

--- a/app/actionsRenderingEngine/conf/sim/config.ini
+++ b/app/actionsRenderingEngine/conf/sim/config.ini
@@ -11,6 +11,7 @@ object_detection_wait_thresh        5.0
 [motor]
 robot                               icubSim
 part_used                           both_arms
+actionprimitives_layer              2
 waveing                             off
 thread_period                       30
 default_exec_time                   0.75
