--- a/src/tools/joystickCtrl/CMakeLists.txt
+++ b/src/tools/joystickCtrl/CMakeLists.txt
@@ -15,8 +15,7 @@ IF (APPLE)
  LIST( APPEND folder_source ${SDL_INCLUDE_DIR}/SDLMain.m )
 ENDIF (APPLE)
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}
-		                ${SDL_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${SDL_INCLUDE_DIR})
 
 SET(folder_source main.cpp)
 
