remove skinprototype device
it's been declared deprecated since long

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -14,9 +14,8 @@ option (WIP_FEATURE_CHECK_PROTOCOL_VERSION "use OFF until this feature is tested
 mark_as_advanced (WIP_FEATURE_CHECK_PROTOCOL_VERSION)
 
 if(WIP_FEATURE_CHECK_PROTOCOL_VERSION)
-add_definitions(-D_WIP_CHECK_PROTOCOL_VERSION_)
-else(WIP_FEATURE_CHECK_PROTOCOL_VERSION)
-endif(WIP_FEATURE_CHECK_PROTOCOL_VERSION)
+  add_definitions(-D_WIP_CHECK_PROTOCOL_VERSION_)
+endif()
 
 yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(canBusMotionControl)
@@ -37,7 +36,6 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(plxCan)
   add_subdirectory(staticgrabber)
   add_subdirectory(xsensmtx)
-  add_subdirectory(skinprototype)
   add_subdirectory(skinWrapper)
   add_subdirectory(canBusAnalogSensor)
   add_subdirectory(canBusDoubleFTSensor)
